天美汇鸡翅包饭 小程序

--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
 		"minified": true,
 		"newFeature": true
 	},
-	"appid": "wxb931064550177182",
+	"appid": "wx661760df7904a25a",
 	"projectname": "riverSnow",
 	"condition": {}
 }
