--- a/src/app.json
+++ b/src/app.json
@@ -12,7 +12,7 @@
     ],
     "window": {
         "navigationBarTextStyle": "white",
-        "navigationBarTitleText": "创客宝",
+        "navigationBarTitleText": "天美汇鸡包饭",
         "navigationBarBackgroundColor": "#000",
         "backgroundColor": "#000"
     },
