--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
 		"minified": true,
 		"newFeature": true
 	},
-	"appid": "wx661760df7904a25a",
+	"appid": "wx4dd5f2608ee2198a",
 	"projectname": "riverSnow",
 	"compileType": "miniprogram",
 	"condition": {}
