视频链接与公司名长短

--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
 		"minified": true,
 		"newFeature": true
 	},
-	"appid": "wxb2fe87683574f351",
+	"appid": "wx4dd5f2608ee2198a",
 	"projectname": "riverSnow",
 	"compileType": "miniprogram",
 	"condition": {}
